force-app/main/default/objects/POC__c/fields/How_many_users_are_there_in_the_Okta_IdP__c.field-meta.xml
<CustomField>
    <fullName>How_many_users_are_there_in_the_Okta_IdP__c</fullName>
    <label>How many users are there in the Okta IdP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>