force-app/main/default/objects/POC__c/fields/How_much_FETB_do_you_need__c.field-meta.xml
<CustomField>
    <fullName>How_much_FETB_do_you_need__c</fullName>
    <label>How much FETB do you need?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>