force-app/main/default/objects/POC__c/fields/Identity_Cyber_Recovery_for_Okta__c.field-meta.xml
<CustomField>
    <fullName>Identity_Cyber_Recovery_for_Okta__c</fullName>
    <label>Identity Cyber Recovery for Okta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>