force-app/main/default/objects/POC__c/fields/Jira_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Jira_Cloud__c</fullName>
    <label>Jira Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>