force-app/main/default/objects/POC__c/fields/Kubernetes__c.field-meta.xml
<CustomField>
    <fullName>Kubernetes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kubernetes</label>
    <type>Checkbox</type>
</CustomField>