force-app/main/default/objects/POC__c/fields/Lab_Type__c.field-meta.xml
<CustomField>
    <fullName>Lab_Type__c</fullName>
    <label>Lab Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foundations Unconfigured</fullName>
            </value>
            <value>
                <fullName>Foundations Unconfigured + Azure</fullName>
            </value>
            <value>
                <fullName>Foundations Unconfigured + AWS</fullName>
            </value>
            <value>
                <fullName>Foundations Configured</fullName>
            </value>
            <value>
                <fullName>Foundations Configured + Azure</fullName>
            </value>
            <value>
                <fullName>Foundations Configured + AWS</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: Orchestrated Recovery</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: Ransomware Recovery</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: Databases</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: VMware</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: CNP AWS</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: CNP Azure</fullName>
            </value>
            <value>
                <fullName>Camp Rubrik: Kubernetes</fullName>
            </value>
            <value>
                <fullName>Active (SLAs Assigned)</fullName>
                <isActive>false</isActive>
                <label>Active (SLAs Assigned)</label>
            </value>
            <value>
                <fullName>Active (SLAs Assigned) + AWS</fullName>
                <isActive>false</isActive>
                <label>Active (SLAs Assigned) + AWS</label>
            </value>
            <value>
                <fullName>Active (SLAs Assigned) + AWS + Polaris</fullName>
                <isActive>false</isActive>
                <label>Active (SLAs Assigned) + AWS + Polaris</label>
            </value>
            <value>
                <fullName>Active (SLAs Assigned) + Azure</fullName>
                <isActive>false</isActive>
                <label>Active (SLAs Assigned) + Azure</label>
            </value>
            <value>
                <fullName>Active (SLAs Assigned) + Azure + Polaris</fullName>
                <isActive>false</isActive>
                <label>Active (SLAs Assigned) + Azure + Polaris</label>
            </value>
            <value>
                <fullName>Active (SLAs Assigned) + Polaris</fullName>
                <isActive>false</isActive>
                <label>Active (SLAs Assigned) + Polaris</label>
            </value>
            <value>
                <fullName>Brikday NAS - NetApp</fullName>
                <isActive>false</isActive>
                <label>Brikday NAS - NetApp</label>
            </value>
            <value>
                <fullName>Configured (pre-SLA) + AWS + Polaris</fullName>
                <isActive>false</isActive>
                <label>Configured (pre-SLA) + AWS + Polaris</label>
            </value>
            <value>
                <fullName>Configured (pre-SLA) + Azure + Polaris</fullName>
                <isActive>false</isActive>
                <label>Configured (pre-SLA) + Azure + Polaris</label>
            </value>
            <value>
                <fullName>Configured (pre-SLA) + Polaris</fullName>
                <isActive>false</isActive>
                <label>Configured (pre-SLA) + Polaris</label>
            </value>
            <value>
                <fullName>Unconfigured (1 post-bootstrap,  1 pre-bootstrap) + AWS + Polaris</fullName>
                <isActive>false</isActive>
                <label>Unconfigured (1 post-bootstrap,  1 pre-bootstrap) + AWS + Polaris</label>
            </value>
            <value>
                <fullName>Unconfigured (1 post-bootstrap,  1 pre-bootstrap) + Azure + Polaris</fullName>
                <isActive>false</isActive>
                <label>Unconfigured (1 post-bootstrap,  1 pre-bootstrap) + Azure + Polaris</label>
            </value>
            <value>
                <fullName>Unconfigured (1 post-bootstrap,  1 pre-bootstrap) + Polaris</fullName>
                <isActive>false</isActive>
                <label>Unconfigured (1 post-bootstrap,  1 pre-bootstrap) + Polaris</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>