force-app/main/default/objects/POC__c/fields/Laminar_Account_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Laminar_Account_Display_Name__c</fullName>
    <label>Data Security Posture Mgmt Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>