force-app/main/default/objects/POC__c/fields/Laminar_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Laminar_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laminar Email Sent</label>
    <type>Checkbox</type>
</CustomField>