force-app/main/default/objects/POC__c/fields/Large_Exchange_database__c.field-meta.xml
<CustomField>
    <fullName>Large_Exchange_database__c</fullName>
    <inlineHelpText>Specify the largest individual Microsoft Exchange database size in TB (terabyte). This data is used for large scale testing.</inlineHelpText>
    <label>(DEPRECATED) Largest Xchange database</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>