force-app/main/default/objects/POC__c/fields/Large_fileset_in_number_of_files__c.field-meta.xml
<CustomField>
    <fullName>Large_fileset_in_number_of_files__c</fullName>
    <inlineHelpText>Specify the count of files for the largest fileset in terms of total files.</inlineHelpText>
    <label>(DEPRECATED) Largest file set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>