force-app/main/default/objects/POC__c/fields/Largest_disk_size_VMDK__c.field-meta.xml
<CustomField>
    <fullName>Largest_disk_size_VMDK__c</fullName>
    <inlineHelpText>Specify the largest individual disk (VMDK) size in TB (terabyte) for the VM. This data is used for large scale testing.</inlineHelpText>
    <label>(DEPRECATED) Largest disk or VMDK size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>