force-app/main/default/objects/POC__c/fields/Largest_fileset_in_capacity__c.field-meta.xml
<CustomField>
    <fullName>Largest_fileset_in_capacity__c</fullName>
    <inlineHelpText>Specify the largest individual fileset size in TB (terabyte) that will be configured. This data is used for large scale testing.</inlineHelpText>
    <label>(DEPRECATED) Largest fileset in capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>