force-app/main/default/objects/POC__c/fields/Largest_MSSQL_Database__c.field-meta.xml
<CustomField>
    <fullName>Largest_MSSQL_Database__c</fullName>
    <label>(DEPRECATED) Largest MSSQL Database</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>