force-app/main/default/objects/POC__c/fields/Largest_Oracle_database_size__c.field-meta.xml
<CustomField>
    <fullName>Largest_Oracle_database_size__c</fullName>
    <label>(DEPRECATED) Largest Oracle DB size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>