force-app/main/default/objects/POC__c/fields/Largest_VM_size__c.field-meta.xml
<CustomField>
    <fullName>Largest_VM_size__c</fullName>
    <label>(DEPRECATED) Largest VM size (TB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>