force-app/main/default/objects/POC__c/fields/Last_Approval_Step_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Step_Entry_Date__c</fullName>
    <description>MKT26:94: This field will be updated with the timestamp every time the record moves to a new approval step.</description>
    <label>Last Approval Step Entry Date</label>
    <type>DateTime</type>
</CustomField>