force-app/main/default/objects/POC__c/fields/Last_Expiration_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiration_Notification_Sent__c</fullName>
    <label>(DEPRECATED) Last Xpiratn Notficatn Sent</label>
    <type>Date</type>
</CustomField>