force-app/main/default/objects/POC__c/fields/Last_Update_POC_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_POC_Status__c</fullName>
    <label>Last Update POC Status</label>
    <type>Date</type>
</CustomField>