force-app/main/default/objects/POC__c/fields/M365_Hosting_environment__c.field-meta.xml
<CustomField>
    <fullName>M365_Hosting_environment__c</fullName>
    <label>M365 and Entra ID License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Hosted Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Rubrik Hosted EE, DSPM, Identity Recovery &amp; Resilience</fullName>
            </value>
            <value>
                <fullName>Customer Hosted</fullName>
                <isActive>false</isActive>
                <label>Customer Hosted</label>
            </value>
            <value>
                <fullName>Rubrik Hosted</fullName>
                <isActive>false</isActive>
                <label>Rubrik Hosted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>