force-app/main/default/objects/POC__c/fields/M365_Hosting_Environment_RSCG__c.field-meta.xml
<CustomField>
    <fullName>M365_Hosting_Environment_RSCG__c</fullName>
    <label>M365 Hosting Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Hosted M365</fullName>
            </value>
            <value>
                <fullName>Customer Hosted M365</fullName>
                <isActive>false</isActive>
                <label>Customer Hosted M365</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>