force-app/main/default/objects/POC__c/fields/Manual_POC_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Manual_POC_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>POC Agreement must be signed by the Customer when requesting a POC</inlineHelpText>
    <label>Manual POC Agreement</label>
    <type>Checkbox</type>
</CustomField>