force-app/main/default/objects/POC__c/fields/Manual_POC_Agreement_OLD__c.field-meta.xml
<CustomField>
    <fullName>Manual_POC_Agreement_OLD__c</fullName>
    <formula>AND(
IF(
  Agreed_to_POC_terms__c = False,True,False
),
IF(
  POC_Agreement_Waived__c = False,True,False
))</formula>
    <label>Manual POC Agreement (OLD)</label>
    <type>Checkbox</type>
</CustomField>