force-app/main/default/objects/POC__c/fields/MNDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>MNDA must be signed by the Customer when there is a POC Agreement waiver</inlineHelpText>
    <label>(DEPRECATED) Customer MNDA Signed</label>
    <type>Checkbox</type>
</CustomField>