force-app/main/default/objects/POC__c/fields/Most_Recent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_End_Date__c</fullName>
    <label>Most Recent End Date</label>
    <type>Date</type>
</CustomField>