force-app/main/default/objects/POC__c/fields/MSSQL__c.field-meta.xml
<CustomField>
    <fullName>MSSQL__c</fullName>
    <label>(DEPRECATED)  MSSQL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>