force-app/main/default/objects/POC__c/fields/MSSQL_Type__c.field-meta.xml
<CustomField>
    <fullName>MSSQL_Type__c</fullName>
    <label>(DEPRECATED) MSSQL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failover (AG)</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>