force-app/main/default/objects/POC__c/fields/NAS_Cloud_Direct_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>NAS_Cloud_Direct_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAS Cloud Direct Email Sent</label>
    <type>Checkbox</type>
</CustomField>