force-app/main/default/objects/POC__c/fields/NAS_CloudDirect_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>NAS_CloudDirect_Site_Name__c</fullName>
    <label>NAS Cloud Direct Site Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>