force-app/main/default/objects/POC__c/fields/NAS_CloudDirect_Timezone__c.field-meta.xml
<CustomField>
    <fullName>NAS_CloudDirect_Timezone__c</fullName>
    <label>NAS Cloud Direct Timezone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>