force-app/main/default/objects/POC__c/fields/NAS_CloudDirect_VM_Type__c.field-meta.xml
<CustomField>
    <fullName>NAS_CloudDirect_VM_Type__c</fullName>
    <label>NAS Cloud Direct VM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMWare</fullName>
            </value>
            <value>
                <fullName>HyperV</fullName>
            </value>
            <value>
                <fullName>Nutanix AHV</fullName>
            </value>
            <value>
                <fullName>RHEV (KVM)</fullName>
            </value>
            <value>
                <fullName>Azure VM</fullName>
            </value>
            <value>
                <fullName>AWS EC2</fullName>
            </value>
            <value>
                <fullName>KVM</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>