force-app/main/default/objects/POC__c/fields/NCD_Editions__c.field-meta.xml
<CustomField>
    <fullName>NCD_Editions__c</fullName>
    <label>NCD Editions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Edition Customer Hosted (Ransomware Monitoring)</fullName>
            </value>
            <value>
                <fullName>Business Edition Rubrik Hosted (w/RCV + Ransomware Monitoring)</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition (w/RCV + Ransomware Monitoring + Sensitive Data Discovery)</fullName>
            </value>
            <value>
                <fullName>Bundled with Cloud Unstructured</fullName>
            </value>
            <value>
                <fullName>Basic NCD</fullName>
                <isActive>false</isActive>
                <label>Basic NCD</label>
            </value>
            <value>
                <fullName>Basic NCD (No RCV)</fullName>
                <isActive>false</isActive>
                <label>Basic NCD (No RCV)</label>
            </value>
            <value>
                <fullName>Enterprise Edition</fullName>
                <isActive>false</isActive>
                <label>Enterprise Edition</label>
            </value>
            <value>
                <fullName>Enterprise Edition (w/RCV Archive Tier + Ransomware Investigation + Data Classification)</fullName>
                <isActive>false</isActive>
                <label>Enterprise Edition (w/RCV Archive Tier + Ransomware Investigation + Data Classification)</label>
            </value>
            <value>
                <fullName>Foundation Edition</fullName>
                <isActive>false</isActive>
                <label>Foundation Edition</label>
            </value>
            <value>
                <fullName>Foundation Edition (w/RCV Archive Tier)</fullName>
                <isActive>false</isActive>
                <label>Foundation Edition (w/RCV Archive Tier)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>