force-app/main/default/objects/POC__c/fields/NetSuite_PO__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_PO__c</fullName>
    <label>(DEPRECATED) NetSuite PO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>