force-app/main/default/objects/POC__c/fields/New_Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>