force-app/main/default/objects/POC__c/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <formula>Most_Recent_End_Date__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>