force-app/main/default/objects/POC__c/fields/Number_of_Expiry_Notifications_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expiry_Notifications_Sent__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Ops</businessOwnerGroup>
    <description>MKT24- 955 Created to store number of expiry notifications sent out.</description>
    <label>Number of Expiry Notifications Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>