force-app/main/default/objects/POC__c/fields/Number_of_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Extensions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Extensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>