force-app/main/default/objects/POC__c/fields/Number_of_MSSQL_databases_per_host__c.field-meta.xml
<CustomField>
    <fullName>Number_of_MSSQL_databases_per_host__c</fullName>
    <label>(DEPRECATED) No of MSSQL DB per host</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>