force-app/main/default/objects/POC__c/fields/Number_Of_NCD_FETB__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_NCD_FETB__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created for MKT24-498</description>
    <inlineHelpText>RCV will have 3x BETB for storage. Number of UCL FETB should be between 1 and 10.</inlineHelpText>
    <label>How much NCD FETB do you need ?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>