force-app/main/default/objects/POC__c/fields/Number_of_repositories_to_back_up_1_500__c.field-meta.xml
<CustomField>
    <fullName>Number_of_repositories_to_back_up_1_500__c</fullName>
    <label>Number of repositories to back up(1-500)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>