force-app/main/default/objects/POC__c/fields/Number_Of_UCL_FETB__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_UCL_FETB__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>RCV will have 12x BETB for storage. Number of UCL FETB should be between 1 and 5.</inlineHelpText>
    <label>How much UCL FETB do you need?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>