force-app/main/default/objects/POC__c/fields/Number_of_Users_Google_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users_Google_Workspace__c</fullName>
    <description>Created as part of MKT26-1556.</description>
    <label>Number of Users ( Google Workspace )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>