force-app/main/default/objects/POC__c/fields/Number_of_Users_Saas__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users_Saas__c</fullName>
    <label>Number of Users (SaaS (Salesforce))</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>