force-app/main/default/objects/POC__c/fields/Online_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Online_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>