force-app/main/default/objects/POC__c/fields/Operations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Notes__c</fullName>
    <label>(DEPRECATED) Operations Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>