force-app/main/default/objects/POC__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties to the Opportunity. Child records can be reparented to other parent records after they have been created.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>POC Requests</relationshipLabel>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>