force-app/main/default/objects/POC__c/fields/Opportunity_Amount_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_ACV__c</fullName>
    <formula>Opportunity__r.ACV_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>