force-app/main/default/objects/POC__c/fields/Opportunity_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Area__c</fullName>
    <formula>Opportunity__r.ETM_Area__c</formula>
    <label>Opportunity Area</label>
    <type>Text</type>
</CustomField>