force-app/main/default/objects/POC__c/fields/Opportunity_Campaign_Auto_Gen__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Campaign_Auto_Gen__c</fullName>
    <formula>Opportunity__r.Campaign.Enabled_for_Opportunity_creation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Campaign Auto Gen</label>
    <type>Checkbox</type>
</CustomField>