force-app/main/default/objects/POC__c/fields/Opportunity_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lead_Source__c</fullName>
    <formula>Text( Opportunity__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Lead Source</label>
    <type>Text</type>
</CustomField>