force-app/main/default/objects/POC__c/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <formula>Opportunity__r.ETM_Region__c</formula>
    <label>Opportunity Region</label>
    <type>Text</type>
</CustomField>