force-app/main/default/objects/POC__c/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Opportunity_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Opportunity Sub Type</label>
    <type>Text</type>
</CustomField>