force-app/main/default/objects/POC__c/fields/Opportunity_T_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_T_Level_1__c</fullName>
    <formula>TEXT(Opportunity__r.Owner.TLevel1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Opportunity  T-Level 1</label>
    <type>Text</type>
</CustomField>