force-app/main/default/objects/POC__c/fields/Opportunity_T_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_T_Level_2__c</fullName>
    <formula>TEXT(Opportunity__r.Owner.TLevel2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Opportunity  T-Level 2</label>
    <type>Text</type>
</CustomField>