force-app/main/default/objects/POC__c/fields/Opportunity_Territory__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Territory__c</fullName>
    <formula>Opportunity__r.ETM_Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Territory</label>
    <type>Text</type>
</CustomField>