force-app/main/default/objects/POC__c/fields/Opportunity_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Theatre__c</fullName>
    <formula>Opportunity__r.ETM_Theatre__c</formula>
    <label>Opportunity Theatre</label>
    <type>Text</type>
</CustomField>