force-app/main/default/objects/POC__c/fields/Oracle__c.field-meta.xml
<CustomField>
    <fullName>Oracle__c</fullName>
    <label>(DEPRECATED) Oracle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>