force-app/main/default/objects/POC__c/fields/Order_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfilled__c</fullName>
    <formula>ISPICKVAL(Order__r.Order_Status__c, &apos;Shipped&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Fulfilled</label>
    <type>Checkbox</type>
</CustomField>