force-app/main/default/objects/POC__c/fields/Order_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipped__c</fullName>
    <label>Order Shipped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>