force-app/main/default/objects/POC__c/fields/Other_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Other_Accessories__c</fullName>
    <label>Other Product Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>