force-app/main/default/objects/POC__c/fields/Other_Switch__c.field-meta.xml
<CustomField>
    <fullName>Other_Switch__c</fullName>
    <label>(DEPRECATED) Other Switch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>