force-app/main/default/objects/POC__c/fields/Partner_Disty_Signed_POC_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Partner_Disty_Signed_POC_Addendum__c</fullName>
    <label>Partner/Disty Signed POC Addendum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>