force-app/main/default/objects/POC__c/fields/Physical_servers__c.field-meta.xml
<CustomField>
    <fullName>Physical_servers__c</fullName>
    <label>(DEPRECATED) Total physical server count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>