force-app/main/default/objects/POC__c/fields/Planned_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Installation_Date__c</fullName>
    <label>Planned Installation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>